fix(gitignore): Correctly ignore node_modules and update tracked files